# pong-rs

./: Cargo.toml  README.md
res/: computer.rs.bak  main.rs.bak
src/: ball.rs  collision.rs  collision.rs.cp  computer.rs  main.rs  player.rs  ui.rs
src/assets/sound/: underclocked.opus
